--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="card_image_view_size">150dp</dimen>
     <dimen name="control_view_size">80dp</dimen>
     <dimen name="control_view_padding">10dp</dimen>
+    <dimen name="setting_view_size">80dp</dimen>
+    <dimen name="setting_view_padding">10dp</dimen>
 </resources>
