--- a/app/src/main/res/layout/activity_now_playing.xml
+++ b/app/src/main/res/layout/activity_now_playing.xml
@@ -16,6 +16,6 @@
 
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/now_playing_fragment"
-    android:name="com.sregg.android.tv.spotify.fragments.NowPlayingFragment"
+    android:name="com.sregg.android.tv.spotifyPlayer.fragments.NowPlayingFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
